=====================================================================
	Change Log
	Genmod

	This and other information can be found online at
	http://www.sourceforge.net/projects/genmod

	# $Id: changelog.txt 48 2019-03-02 09:25:15Z Boudewijn $
=====================================================================

Version 2.1 beta 1
- Fixed Change family members function not working anymore
- Added user first/last name to print _GMU userid
- Fixed useradmin error on password change
- Fixed replaced crypt function with password_hash and verify
- Fixed error if gedrecord display is called without type
- Fixed error if mimetype returns false (PHP 7.4)
- Added warning if install with DB at LOCALHOST fails
- Fixed error on footnotes in PDF generator (PHP 7.4)
- Fixed event appears double in calendar URL
- Fixed several style inconsistencies
- Fixed error on edit records (PHP 7.4)
- Fixed error when printing help text that does not exist (PHP 7.4)
- Fixed error in mfile is mimetype is empty (PHP 7.4)
- Fixed wrong url from website base
- Fixed error for tempfil in statistics plot
- Added validation of input for charts box width
- Added gedcom config option to exclude folders from media tree
- Fixed text out of box on registration message
- Fixed error in search controller
- Fixed incorrect embedding of notes and media in gedcom export
- Fixed unsorted dirlist in add media
- Fixed indexing errors due to wrong viewport
- Fixed Longest living person should not be based on "before" or "after" dates
- Fixed URL in repo facts print incorrect
- Fixed date error in calendar
- Fixed placelist link for showing indi/fams doesn't work
- Fixed http links to sourceforge should be https
- Fixed date error in person_class
- Fixed error in clippings
- Added support for PHP 7.2
- Fixed version to Beta 2 in install and admin
- Fixed linebreak missing in RSS feed recent changes
- Fixed CONT text in sources is printed twice
- Added function and option to create sitemaps